added profile pic

--- a/niraj-kum-portfolio/src/index.css
+++ b/niraj-kum-portfolio/src/index.css
@@ -10,7 +10,7 @@ body {
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: gray;
+  /* background-color: gray; */
 }
 
 code {
